src/_base.less
@import "_variables.less";
@import "_feeds-holder.less";
@import "_toolbar-frame.less";
@import "_content-wrap.less";
@import "_content.less";
@import "_overlay.less";

@font-face {
  font-family: "SansCn";
  font-style: normal;
  font-weight: normal;
  src: local("Arial Narrow"), local("Liberation Sans Narrow"),
    url("feedly/fonts/texgyreheroscn-regular-webfont.woff") format("woff"),
    url("feedly/fonts/texgyreheroscn-regular-webfont.ttf") format("truetype");
}
@font-face {
  font-family: "SansCn";
  font-style: normal;
  font-weight: bold;
  src: local("HelveticaNeue-CondensedBold"), local("Arial Narrow Bold"),
    local("Arial Narrow"), local("Liberation Sans Narrow Bold"),
    local("Liberation Sans Narrow"),
    url("feedly/fonts/texgyreheroscn-bold-webfont.woff") format("woff"),
    url("feedly/fonts/texgyreheroscn-bold-webfont.ttf") format("truetype");
}
@font-face {
  font-family: "SansCn";
  font-style: italic;
  font-weight: normal;
  src: local("Arial Narrow Italic"), local("Arial Narrow"),
    local("Liberation Sans Narrow Italic"), local("Liberation Sans Narrow"),
    url("feedly/fonts/texgyreheroscn-italic-webfont.woff") format("woff"),
    url("feedly/fonts/texgyreheroscn-italic-webfont.ttf") format("truetype");
}
@font-face {
  font-family: "SansCn";
  font-style: italic;
  font-weight: bold;
  src: local("Arial Narrow Bold Italic"), local("Arial Narrow"),
    local("Liberation Sans Narrow Bold Italic"), local("Liberation Sans Narrow"),
    url("feedly/fonts/texgyreheroscn-bolditalic-webfont.woff") format("woff"),
    url("feedly/fonts/texgyreheroscn-bolditalic-webfont.ttf") format("truetype");
}

::-webkit-scrollbar {
  height: 4px;
}

.material-icons {
  color: @color-fade6;
}

body.ttrss_main {
  background-color: @default-bg;
  color: @default-text;

  .dijitSplitter {
    background-color: transparent;
  }

  .dijitSplitterThumb {
    display: none;
  }

  #main {
    background-color: @border-default !important;
  }

  &:not(.ttrss_prefs) #main {
    padding-left: 30px;
  }

  .dijitDialogUnderlay {
    opacity: 0.4;
  }
}

